--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,7 +42,7 @@ jobs:
       contents: write
     strategy:
       matrix:
-        py_version: [ "3.8", "3.9", "3.10", "3.11", "3.12" ]
+        py_version: [ "3.8", "3.9", "3.10", "3.11", "3.12", "3.13" ]
         os: [ ubuntu-latest ]
     runs-on: "${{ matrix.os }}"
     steps:
