--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,39 +1,27 @@
-name: test
+name: tests
 
 on:
   pull_request:
     branches:
-      - '*'
+      - "*"
   push:
     branches:
-      - 'master'
-
-env:
-  POETRY_VERSION: "1.7.1"
+      - "master"
 
 jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v5
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.8"
-
-      - name: Install poetry
-        run: |
-          curl -sSL https://install.python-poetry.org | POETRY_VERSION=$POETRY_VERSION python3
-          echo "$HOME/.local/bin" >> $GITHUB_PATH
+      - name: Install tools
+        uses: jdx/mise-action@v3
 
       - name: Install dependencies
-        run: poetry install --no-interaction
-        env:
-          POETRY_VIRTUALENVS_CREATE: false
+        run: uv sync
 
-      - name: Lint
-        run: poetry run pre-commit run --all
+      - name: Run lint
+        run: make lint
 
   test:
     permissions:
@@ -42,36 +30,29 @@ jobs:
       contents: write
     strategy:
       matrix:
-        py_version: [ "3.8", "3.9", "3.10", "3.11", "3.12", "3.13" ]
-        os: [ ubuntu-latest ]
+        py_version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
+        os: [ubuntu-latest]
     runs-on: "${{ matrix.os }}"
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v5
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - name: Install tools
+        uses: jdx/mise-action@v3
         with:
-          python-version: "${{ matrix.py_version }}"
-
-      - name: Install poetry
-        run: |
-          curl -sSL https://install.python-poetry.org | POETRY_VERSION=$POETRY_VERSION python3
-          echo "$HOME/.local/bin" >> $GITHUB_PATH
+          install_args: python@${{ matrix.py_version }} uv
 
       - name: Install dependencies
-        run: poetry install --no-interaction
-        env:
-          POETRY_VIRTUALENVS_CREATE: false
+        run: uv sync
 
       - name: Run tests
         run: make test
 
       - name: Generate report
-        run: coverage xml && coverage json
+        run: uv run coverage xml && uv run coverage json
 
       - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v3
-        if: matrix.os == 'ubuntu-latest' && matrix.py_version == '3.8'
+        uses: codecov/codecov-action@v5
+        if: matrix.os == 'ubuntu-latest' && matrix.py_version == '3.10'
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           fail_ci_if_error: true
