--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,12 +1,12 @@
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
+    rev: v6.0.0
     hooks:
       - id: check-toml
       - id: end-of-file-fixer
       - id: trailing-whitespace
       - id: name-tests-test
-        args: [ "--pytest-test-first" ]
+        args: ["--pytest-test-first"]
 
   - repo: https://github.com/Lucas-C/pre-commit-hooks-nodejs
     rev: v1.1.2
@@ -15,22 +15,36 @@ repos:
         files: ^README.md$
 
   - repo: https://github.com/asottile/blacken-docs
-    rev: 1.15.0
+    rev: 1.18.0
     hooks:
       - id: blacken-docs
-        additional_dependencies: [ black==23.7.0 ]
-
-  - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: "v0.3.7"
-    hooks:
-      - id: ruff
-        args: [ "--fix" ]
-      - id: ruff-format
+        additional_dependencies: [black==24.8.0]
 
   - repo: local
     hooks:
+      - id: ruff-format
+        name: ruff-format
+        language: system
+        entry: ruff format
+        types: [python]
+
+      - id: ruff
+        name: ruff
+        language: system
+        entry: ruff check --fix
+        types: [python]
+
+      - id: lock-file-check
+        name: lock file check
+        language: system
+        entry: uv lock --check
+        pass_filenames: false
+        files: ^(pyproject\.toml|.*\.lock)$
+
       - id: mypy
         name: mypy
         language: system
-        entry: mypy --show-error-codes
-        types: [ python ]
+        entry: mypy
+        pass_filenames: false
+        types: [python]
+        args: ["src", "tests"]
